k8s/policies/04-allow-db-access.yaml
---
# k8s/policies/04-allow-db-access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-postgres
  namespace: default 
spec:
  podSelector:
    matchExpressions:         
    - key: app
      operator: In
      values: 
      - darkseek-db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: darkseek-backend-mqtt
    - podSelector:
        matchLabels:
          app: darkseek-backend-ws
    ports:
    - protocol: TCP
      port: 5432
