k8s/policies/05-allow-redis-access.yaml
---
# k8s/policies/05-allow-redis-access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-redis
  namespace: default 
spec:
  podSelector:
    matchLabels:              
      app: darkseek-redis
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: darkseek-backend-ws
    - podSelector:
        matchLabels:
          app: darkseek-backend-mqtt
    - podSelector:
        matchLabels:
          app: debug-mqtt
    ports:
    - protocol: TCP
      port: 6379
